--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,3 +73,7 @@ body {
   background-position: 50%;
   background-color: #6232a8;
 }
+
+.sidebar {
+  box-shadow: 20px 0 20px 0 rgba(0, 0, 0, 0.12), 0 2px 3px 0 rgba(0, 0, 0, 0.22);
+}
